cmake_minimum_required(VERSION 3.16)
project(cc_executable)

set(CMAKE_CXX_STANDARD 14)

add_executable(cc_executable main.cpp)
add_executable(baseballgame baseballgame.cpp)
add_executable(validparenthesses validparenthesses.cpp)
add_executable(llongestsubstring llongestsubstring.cpp)
add_executable(medianoftwosortedarraies medianoftwosortedarraies.cpp)
add_executable(longestpalindrome longestpalindrome.cpp)
add_executable(longestpalindrome2 longestpalindrome2.cpp)
add_executable(largestperemeter largestperemeter.cpp)
add_executable(containsDuplicate containsDuplicate.cpp)
add_executable(containsNearbyAlmostDuplicate containsNearbyAlmostDuplicate.cpp)
add_executable(zigzagxonversion zigzagxonversion.cpp)
add_executable(p1 p1.cpp)
add_executable(pp2 pp2.cpp)

